3.2.0 2022xxxx
  BF: Build: Correction of the release info process
  CR: Platform: Optimization when detaching / process termination
      Killing of processes can be blocked by system protection.
      It is tried up to three times and then ignored. 

3.1.0 20220401
  BF: Platform: Correction of settings template synchronization
      If the target file is newer than the template, the template will be updated.
  BF: Platform Create: Correction of settings directory
      Has been moved from \Documents\Settings to \Settings.
  BF: Platform: Compact per Diskpart was not executed
  BF: Platform: Optimization and corrections
  BF: Platform: Optimization and corrections of the texts
  CR: Platform: Optimization / enhancement of function compact
  CR: Platform: Optimization of notification message output
  CR: Platform: Unification of namespace / platform icon / (sub) project structure
  CR: Platform: Added build script/process via Ant
  CR: Platform: Optimization of error logging
  CR: Platform: Added console as default command line prompt
  CR: Platform: Added launcher as default launcher to keep the environment alive
  CR: Platform: Added shiftdown as optional service to shift down the process priority
      The service automatically downgrades the process priority of CPU-intensive processes.
      For older Intel generations that suffer from the update of Windows and Intel.

3.0.0 20211126
  CR: Platform: Added function shortcuts
      Creates the usual calls as shortcuts.
      e.g. platform.exe B: shortcuts
  CR: Settings: Added for placeholder replacement in files
      This simplifies the personalization , distribution, migrations and updates.

2.0.0 2019xxxx
  NT: Not published

2.0.0 2015xxxx
  NT: Not published

1.0.0 20xxxxxx
  NT: Not published