@@ -1,0 +1,51 @@
+﻿; Settings provide custom environment variables for the virtual environment and
+; can fill placeholders in the files of the virtual environment. For this
+; purpose, an ini file with the same name as the environment in the working
+; directory is used. This file is optional and can exist but does not have to.
+;
+; The ini file contains two sections: SETTINGS and FILES.
+;
+; The section SETTINGS provides the keys and values for the placeholder
+; replacement. The values can also already contain placeholders from preceding
+; keys or environment variables. Keys start with a letter or underscore, then
+; can be followed by alphanumeric characters, minus, underscore and dot, and
+; end alphanumerically or with an underscore. Key and values are separated by a
+; space, colon or equal sign.
+;
+; The FILES section is an optional list of files where the placeholders should
+; be replaced and so to say, only of a list of values. Placeholders and
+; environment variables are also supported. The paths must start with a slash
+; or backslash. Drives at the beginning of the path are not supported, because
+; the settings always use the drive of the virtual environment. When reading
+; the ini file, unsupported paths are ignored.
+;
+; Basically, sections, keys and placeholders are case-insensitive.
+; The notation of the placeholders: #[name]
+;
+; The values of the placeholders come from the settings or from the environment
+; variable. Environment variables can be used in two notations %name% and
+; #[name]. In both cases is case-insensitive. The difference is that
+; placeholders can be changed by line-by-line processing of the sections. The
+; environment variables in the notation %name% remain unchanged.
+;
+; The settings are read when the virtual environment is started. The
+; environment variables are enriched with them and the placeholders in the
+; files are filled before the startup.cmd is executed. Filling the placeholders
+; is executed with every startup and overwrites old values when the value or
+; file content changes.   
+
+[SETTINGS]
+; account         %USERNAME%
+; password        You do not want to know :-)
+; gitlab-user     git_#[account]
+; gitlab-token    git_123_456_789
+; jira-user       jir_#[account]
+; jira-token      jir_123_456_789
+
+; concat-example    1    
+; concat-example    #[concat-example]2
+; concat-example    #[concat-example]3
+; now the value of concat-example: 123
+
+[FILES]
+; \Program Portables\Maven\conf\settings.xml
